***********************************************************************************
***								CHANGELOG for Pepper							***
***********************************************************************************
*	groupId:		de.hu_berlin.german.korpling.saltnpepper					  *
*	artifactId:		pepper												          *
*													                              *
*	sub-projects:												                  *
*	-------------                                                                 *
*	artifactId:		pepper-exceptions                                             *
*	artifactId:		pepper-framework                                              *
*	artifactId:		pepper-logReader                                              *
*	artifactId:		pepper-modules                                                *
*	artifactId:		pepper-parentModule                                           *
*	artifactId:		pepper-starter                                                *
*	artifactId:		pepper-testSuite                                              *
*	artifactId:		pepper-workflow                                               *
***********************************************************************************

Version 1.1.3
=============

  pepper-framework
  ---------------
	*=	repaired dealing with uris in pepper workflow description, a relative path now can be used with './a/b/c' and an absolute path can be used with 
	    'file:/c:/a/b/c' or 'file:///c:/a/b/c' (for windows) and 'file:/a/b/c' or 'file:///a/b/c' (for linux and mac)
	*+	status message of progress each 20 seconds, with total progress and progress of each document in each pepper module
	
  pepper-moduleTests
  ---------------
    *+ added a better dealing with pepper-module tests when calling testStart(), now the method importCorpusStructure() in case of the fixture
       is an importer will be called
    *+ class PepperModuleTestException was added to mark, that an exception occured in the user defined tests   