@@ -29,4 +29,8 @@ Version 1.1.3
   ---------------
     *+ added a better dealing with pepper-module tests when calling testStart(), now the method importCorpusStructure() in case of the fixture
        is an importer will be called
-    *+ class PepperModuleTestException was added to mark, that an exception occured in the user defined tests   
+    *+ class PepperModuleTestException was added to mark, that an exception occured in the user defined tests
+    
+  pepepr-modules
+  ---------------
+  	*+ added method isFileToImport(URI) to PepperImporter, this method is a callback, to check if a file shall be imported, in case of the file extension is not enough
